src/antlr/jinja2/Jinja2Parser.java
// Generated from C:/Users/yahia/IdeaProjects/flaskcomp/grammars/jinja2/Jinja2Parser.g4 by ANTLR 4.13.2

    package antlr.jinja2;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Jinja2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOUBLE_OPEN_BRACE=1, DOUBLE_CLOSE_BRACE=2, OPEN_TAG=3, CLOSE_TAG=4, COMMENT=5, 
		INCLUDE=6, FOR=7, IN=8, ENDFOR=9, IF=10, ELIF=11, ELSE=12, ENDIF=13, BLOCK=14, 
		ENDBLOCK=15, MACRO=16, ENDMACRO=17, SET=18, ENDSET=19, EXTENDS=20, RAW=21, 
		ENDRAW=22, IS=23, OR=24, AND=25, NOT=26, TRUE=27, FALSE=28, NONE=29, PLUS=30, 
		MINUS=31, STAR=32, SLASH=33, PERCENT=34, EQ=35, NEQ=36, LT=37, GT=38, 
		LTE=39, GTE=40, ASSIGN=41, PIPE=42, DOT=43, COMMA=44, COLON=45, LPAREN=46, 
		RPAREN=47, LBRACK=48, RBRACK=49, STRING=50, NUMBER=51, ID=52, WS=53, TEXT=54;
	public static final int
		RULE_template = 0, RULE_variable = 1, RULE_block_stmt = 2, RULE_inline_stmt = 3, 
		RULE_for_block = 4, RULE_end_for = 5, RULE_target = 6, RULE_if_block = 7, 
		RULE_set_inline = 8, RULE_set_block = 9, RULE_set_targets = 10, RULE_macro_block = 11, 
		RULE_call_params = 12, RULE_param = 13, RULE_block_block = 14, RULE_extends_stmt = 15, 
		RULE_include_stmt = 16, RULE_expr = 17, RULE_primary = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"template", "variable", "block_stmt", "inline_stmt", "for_block", "end_for", 
			"target", "if_block", "set_inline", "set_block", "set_targets", "macro_block", 
			"call_params", "param", "block_block", "extends_stmt", "include_stmt", 
			"expr", "primary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{{'", "'}}'", "'{%'", "'%}'", null, "'include'", "'for'", "'in'", 
			"'endfor'", "'if'", "'elif'", "'else'", "'endif'", "'block'", "'endblock'", 
			"'macro'", "'endmacro'", "'set'", "'endset'", "'extends'", "'raw'", "'endraw'", 
			"'is'", "'or'", "'and'", "'not'", "'true'", "'false'", "'none'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'='", "'|'", "'.'", "','", "':'", "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOUBLE_OPEN_BRACE", "DOUBLE_CLOSE_BRACE", "OPEN_TAG", "CLOSE_TAG", 
			"COMMENT", "INCLUDE", "FOR", "IN", "ENDFOR", "IF", "ELIF", "ELSE", "ENDIF", 
			"BLOCK", "ENDBLOCK", "MACRO", "ENDMACRO", "SET", "ENDSET", "EXTENDS", 
			"RAW", "ENDRAW", "IS", "OR", "AND", "NOT", "TRUE", "FALSE", "NONE", "PLUS", 
			"MINUS", "STAR", "SLASH", "PERCENT", "EQ", "NEQ", "LT", "GT", "LTE", 
			"GTE", "ASSIGN", "PIPE", "DOT", "COMMA", "COLON", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "STRING", "NUMBER", "ID", "WS", "TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jinja2Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Jinja2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Jinja2Parser.EOF, 0); }
		public List<TerminalNode> TEXT() { return getTokens(Jinja2Parser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(Jinja2Parser.TEXT, i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<Block_stmtContext> block_stmt() {
			return getRuleContexts(Block_stmtContext.class);
		}
		public Block_stmtContext block_stmt(int i) {
			return getRuleContext(Block_stmtContext.class,i);
		}
		public List<Inline_stmtContext> inline_stmt() {
			return getRuleContexts(Inline_stmtContext.class);
		}
		public Inline_stmtContext inline_stmt(int i) {
			return getRuleContext(Inline_stmtContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(Jinja2Parser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(Jinja2Parser.COMMENT, i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 18014398509482026L) != 0)) {
				{
				setState(43);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(38);
					match(TEXT);
					}
					break;
				case 2:
					{
					setState(39);
					variable();
					}
					break;
				case 3:
					{
					setState(40);
					block_stmt();
					}
					break;
				case 4:
					{
					setState(41);
					inline_stmt();
					}
					break;
				case 5:
					{
					setState(42);
					match(COMMENT);
					}
					break;
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TerminalNode DOUBLE_OPEN_BRACE() { return getToken(Jinja2Parser.DOUBLE_OPEN_BRACE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DOUBLE_CLOSE_BRACE() { return getToken(Jinja2Parser.DOUBLE_CLOSE_BRACE, 0); }
		public List<TerminalNode> MINUS() { return getTokens(Jinja2Parser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(Jinja2Parser.MINUS, i);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(DOUBLE_OPEN_BRACE);
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(51);
				match(MINUS);
				}
				break;
			}
			setState(54);
			expr(0);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(55);
				match(MINUS);
				}
			}

			setState(58);
			match(DOUBLE_CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Block_stmtContext extends ParserRuleContext {
		public For_blockContext for_block() {
			return getRuleContext(For_blockContext.class,0);
		}
		public If_blockContext if_block() {
			return getRuleContext(If_blockContext.class,0);
		}
		public Set_blockContext set_block() {
			return getRuleContext(Set_blockContext.class,0);
		}
		public Macro_blockContext macro_block() {
			return getRuleContext(Macro_blockContext.class,0);
		}
		public Block_blockContext block_block() {
			return getRuleContext(Block_blockContext.class,0);
		}
		public Block_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterBlock_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitBlock_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitBlock_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_stmtContext block_stmt() throws RecognitionException {
		Block_stmtContext _localctx = new Block_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block_stmt);
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				for_block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				if_block();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				set_block();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				macro_block();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				block_block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Inline_stmtContext extends ParserRuleContext {
		public Extends_stmtContext extends_stmt() {
			return getRuleContext(Extends_stmtContext.class,0);
		}
		public Include_stmtContext include_stmt() {
			return getRuleContext(Include_stmtContext.class,0);
		}
		public Set_inlineContext set_inline() {
			return getRuleContext(Set_inlineContext.class,0);
		}
		public Inline_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inline_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterInline_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitInline_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitInline_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inline_stmtContext inline_stmt() throws RecognitionException {
		Inline_stmtContext _localctx = new Inline_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inline_stmt);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				extends_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				include_stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				set_inline();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class For_blockContext extends ParserRuleContext {
		public TerminalNode OPEN_TAG() { return getToken(Jinja2Parser.OPEN_TAG, 0); }
		public TerminalNode FOR() { return getToken(Jinja2Parser.FOR, 0); }
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public TerminalNode IN() { return getToken(Jinja2Parser.IN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CLOSE_TAG() { return getToken(Jinja2Parser.CLOSE_TAG, 0); }
		public TemplateContext template() {
			return getRuleContext(TemplateContext.class,0);
		}
		public End_forContext end_for() {
			return getRuleContext(End_forContext.class,0);
		}
		public List<TerminalNode> MINUS() { return getTokens(Jinja2Parser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(Jinja2Parser.MINUS, i);
		}
		public For_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterFor_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitFor_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitFor_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_blockContext for_block() throws RecognitionException {
		For_blockContext _localctx = new For_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_for_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(OPEN_TAG);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(73);
				match(MINUS);
				}
			}

			setState(76);
			match(FOR);
			setState(77);
			target();
			setState(78);
			match(IN);
			setState(79);
			expr(0);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(80);
				match(MINUS);
				}
			}

			setState(83);
			match(CLOSE_TAG);
			setState(84);
			template();
			setState(85);
			end_for();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class End_forContext extends ParserRuleContext {
		public TerminalNode OPEN_TAG() { return getToken(Jinja2Parser.OPEN_TAG, 0); }
		public TerminalNode ENDFOR() { return getToken(Jinja2Parser.ENDFOR, 0); }
		public TerminalNode CLOSE_TAG() { return getToken(Jinja2Parser.CLOSE_TAG, 0); }
		public List<TerminalNode> MINUS() { return getTokens(Jinja2Parser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(Jinja2Parser.MINUS, i);
		}
		public End_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterEnd_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitEnd_for(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitEnd_for(this);
			else return visitor.visitChildren(this);
		}
	}

	public final End_forContext end_for() throws RecognitionException {
		End_forContext _localctx = new End_forContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_end_for);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(OPEN_TAG);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(88);
				match(MINUS);
				}
			}

			setState(91);
			match(ENDFOR);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(92);
				match(MINUS);
				}
			}

			setState(95);
			match(CLOSE_TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TargetContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(Jinja2Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(Jinja2Parser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Jinja2Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Jinja2Parser.COMMA, i);
		}
		public TargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_target; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitTarget(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitTarget(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TargetContext target() throws RecognitionException {
		TargetContext _localctx = new TargetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_target);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ID);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(98);
				match(COMMA);
				setState(99);
				match(ID);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_blockContext extends ParserRuleContext {
		public List<TerminalNode> OPEN_TAG() { return getTokens(Jinja2Parser.OPEN_TAG); }
		public TerminalNode OPEN_TAG(int i) {
			return getToken(Jinja2Parser.OPEN_TAG, i);
		}
		public TerminalNode IF() { return getToken(Jinja2Parser.IF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> CLOSE_TAG() { return getTokens(Jinja2Parser.CLOSE_TAG); }
		public TerminalNode CLOSE_TAG(int i) {
			return getToken(Jinja2Parser.CLOSE_TAG, i);
		}
		public List<TemplateContext> template() {
			return getRuleContexts(TemplateContext.class);
		}
		public TemplateContext template(int i) {
			return getRuleContext(TemplateContext.class,i);
		}
		public TerminalNode ENDIF() { return getToken(Jinja2Parser.ENDIF, 0); }
		public List<TerminalNode> MINUS() { return getTokens(Jinja2Parser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(Jinja2Parser.MINUS, i);
		}
		public List<TerminalNode> ELIF() { return getTokens(Jinja2Parser.ELIF); }
		public TerminalNode ELIF(int i) {
			return getToken(Jinja2Parser.ELIF, i);
		}
		public TerminalNode ELSE() { return getToken(Jinja2Parser.ELSE, 0); }
		public If_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterIf_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitIf_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitIf_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_blockContext if_block() throws RecognitionException {
		If_blockContext _localctx = new If_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(OPEN_TAG);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(106);
				match(MINUS);
				}
			}

			setState(109);
			match(IF);
			setState(110);
			expr(0);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(111);
				match(MINUS);
				}
			}

			setState(114);
			match(CLOSE_TAG);
			setState(115);
			template();
			setState(130);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(116);
					match(OPEN_TAG);
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==MINUS) {
						{
						setState(117);
						match(MINUS);
						}
					}

					setState(120);
					match(ELIF);
					setState(121);
					expr(0);
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==MINUS) {
						{
						setState(122);
						match(MINUS);
						}
					}

					setState(125);
					match(CLOSE_TAG);
					setState(126);
					template();
					}
					} 
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(133);
				match(OPEN_TAG);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS) {
					{
					setState(134);
					match(MINUS);
					}
				}

				setState(137);
				match(ELSE);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS) {
					{
					setState(138);
					match(MINUS);
					}
				}

				setState(141);
				match(CLOSE_TAG);
				setState(142);
				template();
				}
				break;
			}
			setState(145);
			match(OPEN_TAG);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(146);
				match(MINUS);
				}
			}

			setState(149);
			match(ENDIF);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(150);
				match(MINUS);
				}
			}

			setState(153);
			match(CLOSE_TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Set_inlineContext extends ParserRuleContext {
		public TerminalNode OPEN_TAG() { return getToken(Jinja2Parser.OPEN_TAG, 0); }
		public TerminalNode SET() { return getToken(Jinja2Parser.SET, 0); }
		public Set_targetsContext set_targets() {
			return getRuleContext(Set_targetsContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(Jinja2Parser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CLOSE_TAG() { return getToken(Jinja2Parser.CLOSE_TAG, 0); }
		public List<TerminalNode> MINUS() { return getTokens(Jinja2Parser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(Jinja2Parser.MINUS, i);
		}
		public Set_inlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_inline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterSet_inline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitSet_inline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitSet_inline(this);
			else return visitor.visitChildren(this);
		}
	}
